--- a/css/style.css
+++ b/css/style.css
@@ -191,3 +191,21 @@ input[type="email"]::placeholder, input[type="password"]::placeholder,input[type
 	width: 70%;
 	margin: auto;
 }
+
+/*sales-box*/
+.sales-box
+{
+	width: 300px;
+	height: 100px;
+	background-color: transparent;
+	display: inline-grid;
+	border-width: 3px;
+	border-style: inset;
+	border-color: #4a306d;
+}
+.sales-box h1,.sales-box h2
+{
+		line-height: .6px;
+		color:#000;
+}
+
