--- a/css/style.css
+++ b/css/style.css
@@ -218,3 +218,40 @@ input[type="email"]::placeholder, input[type="password"]::placeholder,input[type
 {
 	border-color: red;
 }
+
+.container-left
+{
+	width: 58%;
+	display: inline-grid;
+}
+.container-right
+{
+	width: 40%;
+	display: inline-grid;
+}
+/*confirm*/
+.confirm 
+{
+	width:70%;
+	margin:auto;
+	border-style: inset;
+	border-color: red;
+	border-width: 2px;
+	padding: 20px;
+	background-color: #FEEFB3;
+}
+
+.confirm button
+{
+	margin-right: 5px;
+	margin-left: 5px;
+	width:90px;
+	height: 40px;
+	background-color: #0e273c;
+	color:#fff;
+}
+.level-cart
+{
+	position: relative;
+	top:11px;
+}
