--- a/css/style.css
+++ b/css/style.css
@@ -264,19 +264,15 @@ input[type="email"]::placeholder, input[type="password"]::placeholder,input[type
 	position: relative;
 	top:11px;
 }
-.product-image-left
+.product-image img
 {
-	position: absolute;
-	top:70px;
+	width: 400px;
+	height: 400px;
+	position: relative;
+	top: 90px;
 }
-.product-image-right
+.product-image span
 {
-	position: absolute;
-	top:70px;
-	left:80%;
-}
-.product-image-left img,.product-image-right img
-{
-	width: 200px;
-	height: 200px;
+	font-size: 30px;
+	color: red;
 }
