--- a/css/style.css
+++ b/css/style.css
@@ -325,3 +325,10 @@ input[type="email"]::placeholder, input[type="password"]::placeholder,input[type
 {
 	margin-top: 10px;
 }
+.attendant-form label
+{
+	float: left;
+	position: relative;
+	left:120px;
+	top:5px;
+}
